Added navbars and links

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,24 @@
     </head>
 
     <body>
-        <h1>Portfolio</h1>
+        <!--Navbar With Links-->
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand">Portfolio</a>
+            <form class="form-inline">
+                <ul class="nav justify-content-end">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </form>
+        </nav>
+
 
 
 
