Working columns for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,39 @@
         </nav>
 
 
+        <!--Coloumns with images and container-->
 
+
+
+        <div class="container">
+            <div class="card col">
+                <div class="row">
+                    <div class="col">
+                        <h1>Portfolio</h1>
+                        <div class="row">
+                            <div class="col-6 col-sm-6">
+                                <div class="card mx-auto" style="width: 18rem;">
+                                    <img class="card-img-top" src="https://place-hold.it/300" alt="Card image cap">
+                                    <div class="card-body">
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card's content.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-sm-6">
+                                <div class="card mx-auto" style="width: 18rem;">
+                                    <img class="card-img-top" src="https://place-hold.it/300" alt="Card image cap">
+                                    <div class="card-body">
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card's content.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
         <!-- Optional JavaScript -->
