--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+        <link rel="stylesheet" type="text/css" href="/assets/css/portfolio.css">
         <title>Portfolio</title>
     </head>
 
@@ -40,6 +40,7 @@
         <div class="container">
             <div class="card col">
                 <div class="row">
+                    <!--First Row of Columns-->
                     <div class="col">
                         <h1>Portfolio</h1>
                         <div class="row">
@@ -64,9 +65,46 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <!--First Row of Columns-->
+                    <div class="col">
+                        <div class="row">
+                            <div class="col-6 col-sm-6">
+                                <div class="card mx-auto" style="width: 18rem;">
+                                    <img class="card-img-top" src="https://place-hold.it/300" alt="Card image cap">
+                                    <div class="card-body">
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card's content.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-6 col-sm-6">
+                                <div class="card mx-auto" style="width: 18rem;">
+                                    <img class="card-img-top" src="https://place-hold.it/300" alt="Card image cap">
+                                    <div class="card-body">
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk of the card's content.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <!--First Row of Columns-->
+                    <div class="col-6 col-sm-6">
+                        <div class="card mx-auto" style="width: 18rem;">
+                            <img class="card-img-top" src="https://place-hold.it/300" alt="Card image cap">
+                            <div class="card-body">
+                                <p class="card-text">Some quick example text to build on the card title and make
+                                    up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
+        
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
