--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,9 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="/assets/css/portfolio.css">
+
+        <link rel="stylesheet" type="text/css" href="/assets/css/portfolio.css">.
+
         <title>Portfolio</title>
     </head>
 
@@ -36,20 +38,22 @@
         <!--Coloumns with images and container-->
 
 
-
+        <br />
+        
         <div class="container">
-            <div class="card col">
+            <div class="card col rounded">
                 <div class="row">
                     <!--First Row of Columns-->
                     <div class="col">
                         <h1>Portfolio</h1>
+                        <hr>
                         <div class="row">
                             <div class="col-6 col-sm-6">
                                 <div class="card mx-auto" style="width: 18rem;">
                                     <img class="card-img-top" src="https://place-hold.it/300" alt="Card image cap">
                                     <div class="card-body">
-                                        <p class="card-text">Some quick example text to build on the card title and make
-                                            up the bulk of the card's content.</p>
+                                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+
                                     </div>
                                 </div>
                             </div>
@@ -65,6 +69,9 @@
                         </div>
                     </div>
                 </div>
+
+                <br />
+
                 <div class="row">
                     <!--First Row of Columns-->
                     <div class="col">
@@ -90,6 +97,9 @@
                         </div>
                     </div>
                 </div>
+
+                <br />
+
                 <div class="row">
                     <!--First Row of Columns-->
                     <div class="col-6 col-sm-6">
@@ -104,7 +114,7 @@
                 </div>
             </div>
         </div>
-        
+
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
