--- a/portfolio.html
+++ b/portfolio.html
@@ -10,15 +10,15 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <link rel="stylesheet" type="text/css" href="/assets/css/portfolio.css">.
+        <link rel="stylesheet" href="portfolio.css">
 
         <title>Portfolio</title>
     </head>
 
-    <body>
+    <body id="container">
         <!--Navbar With Links-->
-        <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand">Portfolio</a>
+        <nav class="navbar fixed-top navbar-light bg-light">
+            <a class="navbar-brand" href="#">About</a>
             <form class="form-inline">
                 <ul class="nav justify-content-end">
                     <li class="nav-item">
@@ -39,7 +39,7 @@
 
 
         <br />
-        
+
         <div class="container">
             <div class="card col rounded">
                 <div class="row">
@@ -52,7 +52,8 @@
                                 <div class="card mx-auto" style="width: 18rem;">
                                     <img class="card-img-top" src="https://place-hold.it/300" alt="Card image cap">
                                     <div class="card-body">
-                                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level button</button>
+                                        <button type="button" class="btn btn-primary btn-lg btn-block">Block level
+                                            button</button>
 
                                     </div>
                                 </div>
