added correct CSS to all files and footer too index and contact

--- a/contact.html
+++ b/contact.html
@@ -66,6 +66,9 @@
             </div>
         </div>
 
+        <footer class="fixed-bottom" id="top-footer"></footer>
+        <footer class="fixed-bottom" id="footer"></footer>
+
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
