--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <!--Navbar With Links-->
         <span class="border">
-            <nav class="navbar fixed-top navbar-light bg-light">
+            <nav id="nav" class="navbar fixed-top navbar-light bg-light">
                 <a id="about" class="navbar-brand" href="#">Colin Johnson</a>
                 <form class="form-inline">
                     <ul class="nav justify-content-end">
@@ -66,7 +66,8 @@
             </div>
 
         </div>
-        <footer class="fixed-bottom" id="footer">This is a footer</footer>
+        <footer class="fixed-bottom" id="top-footer"></footer>
+        <footer class="fixed-bottom" id="footer"></footer>
         
 
 
