--- a/portfolio.html
+++ b/portfolio.html
@@ -10,30 +10,32 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
             integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="portfolio.css">
+        <link rel="stylesheet" href="index.css">
 
         <title>Portfolio</title>
     </head>
 
-    <body id="container">
+    <body class="body">
         <!--Navbar With Links-->
-        <nav class="navbar fixed-top navbar-light bg-light">
-            <a class="navbar-brand" href="#">About</a>
-            <form class="form-inline">
-                <ul class="nav justify-content-end">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="index.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
-            </form>
-        </nav>
+        <span class="border">
+            <nav id="nav" class="navbar fixed-top navbar-light bg-light">
+                <a id="about" class="navbar-brand" href="#">Colin Johnson</a>
+                <form class="form-inline">
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="index.html" id="navBarLinks">About</a>
+                        </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html" id="navBarLinks">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html" id="navBarLinks">Contact</a>
+                        </li>
+                    </ul>
+                </form>
+            </nav>
+        </span>
 
         <!--Coloumns with images and container-->
 
@@ -46,7 +48,7 @@
                     <!--First Row of Columns-->
                     <div class="col">
                         <h1>Portfolio</h1>
-                        <hr>
+                        <hr />
                         <div class="row">
                             <div class="col-6 col-sm-6">
                                 <div class="card mx-auto" style="width: 18rem;">
@@ -74,7 +76,7 @@
                 <br />
 
                 <div class="row">
-                    <!--First Row of Columns-->
+                    <!--Second Row of Columns-->
                     <div class="col">
                         <div class="row">
                             <div class="col-6 col-sm-6">
@@ -102,7 +104,7 @@
                 <br />
 
                 <div class="row">
-                    <!--First Row of Columns-->
+                    <!--Third Row of Columns-->
                     <div class="col-6 col-sm-6">
                         <div class="card mx-auto" style="width: 18rem;">
                             <img class="card-img-top" src="https://place-hold.it/300" alt="Card image cap">
@@ -116,7 +118,8 @@
             </div>
         </div>
 
-
+        
+        
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
