pushed some columns left

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,8 @@
                 </form>
             </nav>
         </span>
-
+        
+        <div class="col-sm-8">
         <div class="container">
             <div class="card">
                 <h1>About Me</h1>
@@ -58,14 +59,14 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="exampleFormControlTextarea1">Example textarea</label>
+                            <label for="exampleFormControlTextarea1">Message</label>
                             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-
+        </div>
         <footer class="fixed-bottom" id="top-footer"></footer>
         <footer class="fixed-bottom" id="footer"></footer>
 
