Added images to portfolio, and fixed up CSS

--- a/index.html
+++ b/index.html
@@ -38,37 +38,44 @@
             </nav>
         </span>
 
-        <div class="container">
+        <div class="col-sm-8">
+            <div class="container">
 
-            <div class="card">
-                <h1> About Me</h1>
-                <hr />
-                <div class="card-body">
-                    <img id="char" src="https://media.giphy.com/media/aFf7z33l0vdK0/giphy.gif" alt="dice">
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt facere veritatis quos adipisci
-                        eveniet minima deserunt necessitatibus cupiditate? Eaque, consequatur iste nihil quia itaque
-                        soluta, dolorem, repellat rem asperiores officia iusto consequuntur consectetur! Blanditiis
-                        voluptatibus animi reprehenderit veniam explicabo eaque sit ducimus eos error a. Ipsam
-                        necessitatibus nihil excepturi ducimus rem animi dolorem, sint illum placeat beatae nostrum nam
-                        exercitationem inventore temporibus ipsum doloremque, autem dignissimos libero! Perspiciatis
-                        quasi repellendus numquam nulla aut architecto ullam, a dignissimos odio nostrum aperiam ea
-                        voluptatum praesentium dolores aspernatur, facilis earum omnis laboriosam natus id sint commodi?
-                        Ratione nesciunt eaque deleniti consequatur ad vero placeat nemo quis asperiores error
-                        accusantium numquam sapiente tenetur, saepe quam officia doloremque tempora inventore beatae
-                        quidem ducimus pariatur unde harum. Vitae accusamus tempore iusto? Quo nobis magnam consectetur
-                        fugit qui odio ipsum, facere hic porro, reprehenderit ex quasi ad omnis, ipsa ullam rerum.
-                        Minima vero maiores atque consectetur perspiciatis quaerat consequuntur provident sapiente
-                        debitis corrupti recusandae quisquam, autem dolorum ullam molestiae doloremque eum! Perferendis
-                        porro ipsum aspernatur recusandae, similique voluptate saepe possimus qui aliquid reprehenderit
-                        illo doloribus quaerat incidunt nesciunt quibusdam magni beatae eaque. Nemo, aliquid similique
-                        at possimus tempora, magni eligendi tempore velit doloribus nesciunt nam, nisi veritatis.</p>
+                <div class="card">
+                    <h1> About Me</h1>
+                    <hr />
+                    <div class="card-body">
+                        <img id="char" src="https://media.giphy.com/media/IuVFGSQZTd6TK/giphy.gif" alt="dice">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt facere veritatis quos adipisci
+                            eveniet minima deserunt necessitatibus cupiditate? Eaque, consequatur iste nihil quia itaque
+                            soluta, dolorem, repellat rem asperiores officia iusto consequuntur consectetur! Blanditiis
+                            voluptatibus animi reprehenderit veniam explicabo eaque sit ducimus eos error a. Ipsam
+                            necessitatibus nihil excepturi ducimus rem animi dolorem, sint illum placeat beatae nostrum
+                            nam
+                            exercitationem inventore temporibus ipsum doloremque, autem dignissimos libero! Perspiciatis
+                            quasi repellendus numquam nulla aut architecto ullam, a dignissimos odio nostrum aperiam ea
+                            voluptatum praesentium dolores aspernatur, facilis earum omnis laboriosam natus id sint
+                            commodi?
+                            Ratione nesciunt eaque deleniti consequatur ad vero placeat nemo quis asperiores error
+                            accusantium numquam sapiente tenetur, saepe quam officia doloremque tempora inventore beatae
+                            quidem ducimus pariatur unde harum. Vitae accusamus tempore iusto? Quo nobis magnam
+                            consectetur
+                            fugit qui odio ipsum, facere hic porro, reprehenderit ex quasi ad omnis, ipsa ullam rerum.
+                            Minima vero maiores atque consectetur perspiciatis quaerat consequuntur provident sapiente
+                            debitis corrupti recusandae quisquam, autem dolorum ullam molestiae doloremque eum!
+                            Perferendis
+                            porro ipsum aspernatur recusandae, similique voluptate saepe possimus qui aliquid
+                            reprehenderit
+                            illo doloribus quaerat incidunt nesciunt quibusdam magni beatae eaque. Nemo, aliquid
+                            similique
+                            at possimus tempora, magni eligendi tempore velit doloribus nesciunt nam, nisi veritatis.
+                        </p>
+                    </div>
                 </div>
             </div>
-
         </div>
-        <footer class="fixed-bottom" id="top-footer"></footer>
-        <footer class="fixed-bottom" id="footer"></footer>
         
+
 
 
 
