Final push, cleanup and last pass

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                             </div>
                         </form>
                     </div>
-                </div>
+                </div>q
             </div>
         </div>
         <footer class="fixed-bottom" id="top-footer"></footer>
