More additions. Note:never lable things final

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <div class="col-sm-8">
             <div class="container">
                 <div class="card">
-                    <h1>About Me</h1>
+                    <h1>Contact</h1>
                     <hr />
                     <div class="card-body">
                         <form>
@@ -64,7 +64,7 @@
                             </div>
                         </form>
                     </div>
-                </div>q
+                </div>
             </div>
         </div>
         <footer class="fixed-bottom" id="top-footer"></footer>
